package javaClass;
public interface Fourmis {
    void setX(int x);
    void setY(int y);
}
