@startuml

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

class Graphe {}
class Colonie {}
class Arete {}
class Fourmis {}

class Reine {}

class Soldat {}

class Noeud{}
class Etranger {}


Graphe --> Colonie
Colonie --> Noeud
Noeud -> Arete : Relie
Arete -> Noeud : Relie
Noeud --> Fourmis
Fourmis --> Reine : Occupé par >
Fourmis --> Etranger : Peut contenir >
Reine --> Soldat


@enduml